<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Len"
    android:background="@color/tlo2"
    >

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Len">

    <CheckBox
        android:id="@+id/checkYT"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:text="@string/boxYt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkInsta" />

    <EditText
        android:id="@+id/dojazdTxt"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/hintCzasDojazdu"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/drzemkiTxt"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/hintIloscDrzemek"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dojazdTxt" />

    <EditText
        android:id="@+id/filmyTxt"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hintIloscFilmow"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drzemkiTxt" />

    <EditText
        android:id="@+id/serialeTxt"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hintIloscSeriali"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmyTxt" />

    <EditText
        android:id="@+id/gryTxt"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hintIloscGier"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialeTxt" />

    <CheckBox
        android:id="@+id/checkFB"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"

        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/boxFb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gryTxt" />

    <CheckBox
        android:id="@+id/checkInsta"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="@string/boxInsta"
        app:layout_constraintStart_toEndOf="@+id/checkFB"
        app:layout_constraintTop_toBottomOf="@+id/gryTxt" />

    <CheckBox
        android:id="@+id/checkSnap"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:text="@string/boxSnap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkInsta"
        app:layout_constraintTop_toBottomOf="@+id/gryTxt" />

    <Button
        android:id="@+id/DalejBtn"
        android:layout_width="129dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:background="@color/white"

        android:onClick="dalejClicked"
        android:text="@string/Dalej"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wynnikView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/zeroValue"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:background="@color/white"

        android:layout_marginEnd="8dp"
        android:onClick="obliczClicked"
        android:text="@string/btnOblicz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkYT"
        app:layout_constraintTop_toBottomOf="@+id/checkSnap" />

</android.support.constraint.ConstraintLayout>