<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LicznikDeficytu"
    android:background="@color/teal"
    >

    <Button
        android:id="@+id/btnPrzeliczDef"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="14dp"
        android:background="@color/white"
        android:onClick="przeliczDefCklicked"
        android:text="@string/przeliczDef"

        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWynikDef"
        android:layout_width="236dp"
        android:layout_height="129dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:text="@string/ktoreKursy"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="300dp"
        android:layout_height="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/boxKurs1"
                android:layout_width="249dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:checked="false"
                android:text="@string/boxKurs1"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs2"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:text="@string/boxKurs2"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs3"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="140dp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:text="@string/boxKurs3"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs4"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs4"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs5"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="260dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:checked="false"
                android:text="@string/boxKurs5"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs6"
                android:layout_width="249dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="320dp"
                android:layout_marginEnd="8dp"
                android:checked="false"
                android:textColor="@color/white"
                android:text="@string/boxKurs6"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs7"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="380dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:text="@string/boxKurs7"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs8"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs8"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs9"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="500dp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs9"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs10"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginTop="560dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs10"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs11"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginTop="620dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs11"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs12"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="680dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs12"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs13"
                android:layout_width="249dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="740dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs13"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs14"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="800dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:text="@string/boxKurs14"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs15"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="860dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs15"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs16"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="920dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs16"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs17"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginTop="980dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs17"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/boxKurs18"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginTop="1040dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boxKurs18"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>